--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
         </div>
         <div class="col-3">
           <div class="col-auto">
-            <input type="text" id="CF-row1" class="form-control" name="CF-row1" placeholder="Masukkan Nilai Kepastian" />
+            <select id="CF-row1" class="form-select" id="inputGroupSelect01" aria-label="Example select with button addon" placeholder="Small" aria-describedby="inputGroup-sizing-lg">
+              
+            </select>
+            <!-- <input type="text" id="CF-row1" class="form-control" name="CF-row1" placeholder="Masukkan Nilai Kepastian" /> -->
           </div>
         </div>
       </div>
@@ -184,6 +187,7 @@
     <!-- Link JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="./asset//js/index.js"></script>
+    <script type="module" src="./asset//data/cf.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@7.12.15/dist/sweetalert2.all.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
